--- a/preamble.tex
+++ b/preamble.tex
@@ -44,7 +44,9 @@
 }
 
 
-\newcommand{\demon}{{DEMON}~}
+\newcommand{\demon}{{DEMON}}
+\newcommand{\infomap}{{Infomap}}
+
 \usepackage{amssymb}
 \usepackage{bm}
 \usepackage{mathtools}
