messing with table in sec 4

--- a/Fantastic-activists.tex
+++ b/Fantastic-activists.tex
@@ -369,7 +369,7 @@ This view is also supported by the average node degree (mean: 2.04, std dev: 0.4
 	
 	\resizebox{\textwidth}{!}{%
 %		\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|}
-		\begin{tabularx}{\textwidth}{|X|X|X|X|X|X|X|X|X|X|X|X|}
+		\begin{tabularx}{\textwidth}{|X|X|X|p{2.5cm}|X|X|X|X|X|X|X|X|}
 			\hline 
 			\rule[-1ex]{0pt}{2.5ex} \textbf{Context name} &  \textbf{start date} & \textbf{end date}  & \textbf{hashtags} & \textbf{assortativity} & \textbf{avg degree} & \textbf{density} & \textbf{edges} & \textbf{nodes} & \textbf{scc / nodes} & \textbf{\demon~ communities / nodes} &  \textbf{\infomap~ communities / nodes} \\ 
 			\hline 
